# validate-readme

./: LICENSE  README
.github/: dependabot.yml
.github/workflows/: workflow.yml
docs/: index.html  package.json  style.css
docs/prm/: main.py  pyscript.toml
python/: Dockerfile  main.py  pyproject.toml
python/prm/: README
python/python/: main.py  pyproject.toml
python/python/prm/: readme.peg
