[project]
dependencies = [
  "fire==0.5.0",
  "lark-parser==0.12.0"
]
name = "validate-readme"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.4.0",
  "djlint==1.34.0",
  "mypy==1.7.1",
  "ruff==0.1.6",
  "ssort==0.11.6",
  "toml-sort==0.23.1"
]

[project.scripts]
validate_readme = "main:main"

[tool.setuptools]
py-modules = ["main"]
