[project]
dependencies = [
  "fire==0.5.0",
  "lark-parser==0.12.0"
]
name = "validate-readme"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.4.1",
  "djlint==1.34.1",
  "mypy==1.8.0",
  "ruff==0.1.15",
  "ssort==0.12.4",
  "toml-sort==0.23.1"
]

[project.scripts]
validate_readme = "main:main"

[tool.setuptools]
py-modules = ["main"]
